--- a/src/exercices/02-animations.scss
+++ b/src/exercices/02-animations.scss
@@ -7,6 +7,10 @@
     border-radius: 5px;
     color: #003566;
     box-shadow: 0px 0px 4px 0px rgba(#003566, 0.25);
+    animation-name: shadow;
+    animation-duration: 1.5s;
+    animation-iteration-count: infinite;
+    animation-timing-function: ease-in-out;
   }
 
   .loader {
@@ -18,5 +22,36 @@
     background: #ffbe0b;
     border-radius: 50px;
     color: #fff;
+    animation-name: loading;
+    animation-duration: 9s;
+    animation-iteration-count: infinite;
+  }
+}
+
+@keyframes shadow {
+  0% {
+    box-shadow: 0px 0px 4px 6px rgba(0, 53, 102, 0.25);
+  }
+
+  50% {
+    box-shadow: 0px 0px 4px 6px rgba(0, 0, 0, 0);
+  }
+
+  100% {
+    box-shadow: 0px 0px 4px 6px rgba(0, 53, 102, 0.25);
+  }
+}
+
+@keyframes loading {
+  25% {
+    background: #ff006e;
+  }
+
+  75% {
+    background: #8338ec;
+  }
+
+  100% {
+    background: #ffbe0b;
   }
 }
